# fastpng

./: CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: multi-platform.yml
src/: alpha.cpp  alpha.hpp  ccimageext.cpp  ccimageext.hpp  crc32.cpp  crc32.hpp  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  formats.cpp  formats.hpp  info_popup.cpp  info_popup.hpp  main.cpp  manager.cpp  manager.hpp
src/hooks/: CCImage.cpp
